update to docker compose and update host name